<resources>
    <string name="app_name">GasNow</string>
    <string name="intro_background">Intro Background</string>
    <string name="intro_logo">Intro Logo</string>
    <string name="pager_animation">Pager Animation</string>
    <string name="frag_img1">Fragment Image 1</string>
    <string name="gas_now">Gas Now</string>
    <string name="skip">Skip</string>
    <string name="fresh">Fresh</string>
    <string name="everything">Everything</string>
    <string name="long_text1">Everything you will experience will be absolutely fresh</string>
    <string name="tab1">Tab1</string>
    <string name="home">Home</string>
    <string name="delivery">Delivery</string>
    <string name="login_bg">Login BG Pic</string>
    <string name="inside_viewpager">Inside ViewPager</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="google_fab_icon">Google Fab Icon</string>
    <string name="facebook_fab_icon">Facebook Fab Icon</string>
    <string name="login_logo">Login Logo</string>
    <string name="welcome_to_gas_now">Welcome to Gas Now!</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="loginButton">loginButton</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="forget_pass_button">Forget Pass Button</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email ID</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="easy">Easy</string>
    <string name="payment">Payment</string>
    <string name="nextbtn">nextBtn</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="on_demand_gas_delivery">On Demand Gas Delivery System</string>
    <string name="sign_up">Sign up</string>
    <string name="how_gas_now_works">How Gas Now Works?</string>
    <string name="create_naccount">Create\nAccount</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="areaName">Area i.e. Motijheel</string>
    <string name="co_nde">Co\nde</string>
    <string name="verification">Verification</string>
    <string name="forget_pass_phone">Provide The Phone Number that is Registered to GasNow</string>
    <string name="make_nselection">Make\nSelection</string>
    <string name="reset_pass_text">Select which contact detail should we use to reset your password</string>
    <string name="via_sms">Via SMS -</string>
    <string name="phoneNo">+8801309040483</string>
    <string name="via_email">Via Email -</string>
    <string name="emailID">asmnahin21@gmail.com</string>
    <string name="new_pass_back_button">New Pass Back Button</string>
    <string name="new_pass_text">Your Identity Has Been Verified!\nSet New Password</string>
    <string name="new_password">New Password</string>
    <string name="set_password">Set Password</string>
    <string name="password_updated_successfully">Password Updated Successfully!</string>
    <string name="search_nearby">Search Nearby</string>
    <string name="featured_text">Top Rated and Demanding Stores, Stations</string>
    <string name="view_all">View all</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="gas_station">Gas Station</string>
    <string name="gas_store">LPG Store</string>
    <string name="retail_store">Retail Store</string>
    <string name="care">Care</string>
    <string name="featured_locations">Featured Locations</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="featuredimage1">featuredImage1</string>
    <string name="fragment_3_desc">Fulfill your gas needs with GasNow</string>
    <string name="needs">Needs</string>
    <string name="fulfil">Fulfil</string>
    <string name="save">Save</string>
    <string name="time">Time</string>
    <string name="frag2_desc">Order from us instead of going stations/stores</string>
    <string name="on_demand">On Demand</string>
    <string name="frag_1_desc">Gas Now offers on demand delivery system for all your gas needs!</string>
    <string name="copy"><![CDATA[GasNow V1.0.0\n\u00a9 Triquetra - 2023]]></string>
    <string name="copy2"><![CDATA[GasNow V1.0.0 \u00a9 Triquetra - 2023]]></string>
    <string name="code">Code</string>
    <string name="categories_back_button">Categories Back Button</string>
    <string name="household_gas_needs">Household Gas Needs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="itemdashboardbackbtn">itemDashboardBackBtn</string>
    <string name="available_products">Available Products</string>
    <string name="gas_icon">Gas Icon</string>
    <string name="gas">Gas</string>
    <string name="product_image">product Image</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="_1">1</string>
    <string name="price">3500</string>
    <string name="currency">BDT</string>
    <string name="item">Item</string>
    <string name="procedurebackbtn">procedureBackBtn</string>
    <string name="why_gas_now">Why Gas Now?</string>
    <string name="procedure_paragraph">Gas Now is an on demand gas/fuel delivery app.
        You can order your daily gas needs from here.
        We provide verified products to you through the best sellers of the town.
        You can also order the fuel for your car or other transportation of your business.</string>
    <string name="credit_paragraph">App developed by Triquetra.
        \nFrontend designs are covered by Fahim \u0026 Afia.\nBackend and Frontend\'s overall combination was covered by Nahin.\nApp\'s logos/icons/photos have been taken from looka, unsplash, pichon, freepik, flaticon respectively.</string>
    <string name="password_updated">Password Updated</string>
    <string name="enter_one_time_otp_sent_on_8801309040483">Enter One Time OTP Sent on +8801309040483</string>
    <string name="household_gas_nneeds">Household Gas\nNeeds</string>
    <string name="show_all">Show All</string>
    <string name="vehicle_fuel">Vehicle Fuel</string>
    <string name="business_nsolutions">Business \nSolutions</string>
    <string name="cylinder_name">Cylinder Name</string>
    <string name="karim_and_sons">Karim &amp; Sons</string>
    <string name="rating">4.6</string>
    <string name="_314_reviews">(314 Reviews)</string>
    <string name="time_span">06:00-02:00</string>
    <string name="beximko_cylinder_20kg">Beximko Cylinder 20Kg</string>
    <string name="station_name">Station Name</string>
    <string name="fulfil_gas_needs">Fulfil Gas Needs!</string>
    <string name="area">Area</string>
    <string name="address">Address</string>
    <string name="no_orders_found">No Orders Found</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="manage">Manage</string>
    <string name="products">Products</string>
    <string name="cart">Cart</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="order_placed">Order Placed!</string>
</resources>