<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
      <item
          android:id="@+id/nav_home"
          android:title="@string/home"
          android:icon="@drawable/home_outlined_96"/>
        <item
            android:id="@+id/nav_products"
            android:title="@string/products"
            android:icon="@drawable/purchase_order_96px"/>
        <item
            android:id="@+id/nav_cart"
            android:title="@string/cart"
            android:icon="@drawable/shopping_cart_96px"/>
    </group>

    <item android:title="@string/profile">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/user"/>
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/logout_96"/>
            </group>
        </menu>

    </item>

    <item android:title="@string/share">
        <menu>

            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/share_96"/>
                <item
                    android:id="@+id/nav_rateus"
                    android:title="@string/rate_us"
                    android:icon="@drawable/rate_96"/>

            </group>
        </menu>

    </item>

</menu>