<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/bottom_nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/user"
        app:cnb_iconColor = "@color/white"
        app:cnb_backgroundColor = "@color/darker_blue"/>

    <item android:id="@+id/bottom_nav_history"
        android:title="@string/history"
        android:icon="@drawable/history"
        app:cnb_iconColor = "@color/black"
        app:cnb_backgroundColor = "@color/pastel_sky"/>

    <item android:id="@+id/bottom_nav_manage"
        android:title="@string/manage"
        android:icon="@drawable/manage"
        app:cnb_iconColor = "@color/white"
        app:cnb_backgroundColor = "@color/pastel_sky"/>

</menu>