<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".IntroductoryPages.WorkingProcedure">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/procedureBackBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            app:tint="@color/darker_blue"
            android:src="@drawable/back_48"
            android:onClick="callWelcomePageFromProce"
            android:contentDescription="@string/procedurebackbtn"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/dosis_bold"
            android:text="@string/why_gas_now"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/dosis"
            android:text="@string/procedure_paragraph"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/dosis_bold"
            android:text="Credits"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/dosis"
            android:text="@string/credit_paragraph"
            android:textColor="@color/black"
            android:textSize="17sp" />


        <TextView
            android:id="@+id/intro_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bellota_bold"
            android:text="@string/copy2"
            android:textStyle="italic"
            android:textColor="@color/black" />


    </LinearLayout>



</ScrollView>