<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroductoryPages.IntroductoryActivity">


    <ImageView
        android:id="@+id/introBg"
        android:layout_width="wrap_content"
        android:layout_height="900dp"
        android:contentDescription="@string/intro_background"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_blur" />

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <ImageView
            android:id="@+id/introLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:contentDescription="@string/intro_logo"
            android:layout_marginTop="80dp"
            />

        <TextView
            android:id="@+id/introSlogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fulfil Gas Needs"
            android:textColor="@color/light_white"
            android:textSize="30sp"
            android:fontFamily="@font/bellota_bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/intro_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:fontFamily="@font/bellota_bold"
        android:gravity="center"
        android:text="@string/copy"
        android:textColor="@color/light_white" />


    <com.cuberto.liquid_swipe.LiquidPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/pager_animation" />


</RelativeLayout>