<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    tools:context=".IntroductoryPages.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/welcomeAnimationView"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            app:lottie_rawRes="@raw/login_signup_anim"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dosis"
            android:text="@string/welcome_to_gas_now"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"
            android:textSize="33sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dosis"
            android:text="@string/on_demand_gas_delivery"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/wcLoginBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick = "callLoginPage"
                android:layout_marginEnd="10dp"
                android:textColor="@color/white"
                android:background="@drawable/button_design"
                android:layout_weight="1"
                android:text="@string/log_in"
                style="?android:attr/buttonBarButtonStyle"
                android:transitionName="transition_login" />

            <Button
                android:id="@+id/wcSignUpBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:background="@drawable/button_design"
                android:onClick = "callSignUpPage"
                android:layout_weight="1"
                android:text="@string/sign_up"
                style="?android:attr/buttonBarButtonStyle"
                android:transitionName="transition_signup"/>


        </LinearLayout>

        <Button
            android:id="@+id/wcHGWBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:background="@drawable/secondary_button_design"
            android:layout_weight="1"
            android:onClick="callProcedure"
            android:text="@string/how_gas_now_works"
            style="?android:attr/buttonBarButtonStyle" />


    </LinearLayout>


</ScrollView>